--- a/package.json
+++ b/package.json
@@ -8,40 +8,40 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "~1.2.18",
-    "@fortawesome/free-solid-svg-icons": "~5.8.2",
-    "@fortawesome/vue-fontawesome": "~0.1.6",
-    "axios": "~0.18.0",
-    "bootstrap-vue": "~2.0.0-rc.20",
-    "core-js": "~2.6.8",
-    "dayjs": "~1.8.14",
+    "@fortawesome/fontawesome-svg-core": "~1.2.26",
+    "@fortawesome/free-solid-svg-icons": "~5.12.0",
+    "@fortawesome/vue-fontawesome": "~0.1.9",
+    "axios": "~0.19.0",
+    "bootstrap-vue": "~2.1.0",
+    "core-js": "~3.5.0",
+    "dayjs": "~1.8.17",
     "normalize.css": "~8.0.1",
-    "vue": "~2.6.10",
+    "vue": "~2.6.11",
     "vue-class-component": "~7.1.0",
-    "vue-flatpickr-component": "~8.1.2",
-    "vue-property-decorator": "~8.1.1",
-    "vue-router": "~3.0.6"
+    "vue-flatpickr-component": "~8.1.5",
+    "vue-property-decorator": "~8.3.0",
+    "vue-router": "~3.1.3"
   },
   "devDependencies": {
-    "@babel/polyfill": "~7.4.4",
-    "@vue/cli-plugin-babel": "~3.8.0",
-    "@vue/cli-plugin-eslint": "~3.8.0",
-    "@vue/cli-plugin-typescript": "~3.8.1",
-    "@vue/cli-service": "~3.8.0",
-    "@vue/devtools": "~5.1.0",
-    "@vue/eslint-config-typescript": "~4.0.0",
-    "babel-eslint": "~10.0.1",
-    "bootstrap": "~4.3.1",
-    "eslint": "~5.16.0",
-    "eslint-plugin-vue": "~5.0.0",
+    "@babel/polyfill": "~7.7.0",
+    "@vue/cli-plugin-babel": "~4.1.1",
+    "@vue/cli-plugin-eslint": "~4.1.1",
+    "@vue/cli-plugin-typescript": "~4.1.1",
+    "@vue/cli-service": "~4.1.1",
+    "@vue/devtools": "~5.3.3",
+    "@vue/eslint-config-typescript": "~5.0.1",
+    "babel-eslint": "~10.0.3",
+    "bootstrap": "~4.4.1",
+    "eslint": "~6.7.2",
+    "eslint-plugin-vue": "~6.0.1",
     "mutationobserver-shim": "~0.3.3",
-    "node-sass": "~4.12.0",
-    "popper.js": "~1.15.0",
-    "portal-vue": "~2.1.4",
-    "sass-loader": "~7.1.0",
-    "typescript": "~3.4.3",
-    "vue-cli-plugin-bootstrap-vue": "~0.4.0",
-    "vue-template-compiler": "~2.6.10"
+    "node-sass": "~4.13.0",
+    "popper.js": "~1.16.0",
+    "portal-vue": "~2.1.6",
+    "sass-loader": "~8.0.0",
+    "typescript": "~3.7.3",
+    "vue-cli-plugin-bootstrap-vue": "~0.5.0",
+    "vue-template-compiler": "~2.6.11"
   },
   "eslintConfig": {
     "root": true,
